RESOLVED FIXED119384
REGRESSION (r153005): Crash in SpaceSplitString::spaceSplitStringContainsValue on Facebook
https://bugs.webkit.org/show_bug.cgi?id=119384
Summary REGRESSION (r153005): Crash in SpaceSplitString::spaceSplitStringContainsValu...
Georgij
Reported 2013-08-01 01:39:08 PDT
Created attachment 207906 [details] Crash log When opening chat sidebar on Facebook and clicking on a friend, it will crash. Doesn't happen on Safari 6.0.5.
Attachments
Crash log (132.74 KB, text/html)
2013-08-01 01:39 PDT, Georgij
no flags
Patch (3.38 KB, patch)
2013-08-02 16:02 PDT, Benjamin Poulain
no flags
Patch (4.07 KB, patch)
2013-08-02 16:15 PDT, Benjamin Poulain
no flags
Zan Dobersek
Comment 1 2013-08-02 07:34:48 PDT
*** Bug 119383 has been marked as a duplicate of this bug. ***
Zan Dobersek
Comment 2 2013-08-02 07:36:36 PDT
Doesn't seem to be related to bug #119155 or the post-FTL-merge crashes.
Alexey Proskuryakov
Comment 3 2013-08-02 10:09:56 PDT
<rdar://problem/14568421> I didn't attempt to bisect, but this code was added in <http://trac.webkit.org/changeset/153005>.
Benjamin Poulain
Comment 4 2013-08-02 16:02:21 PDT
Benjamin Poulain
Comment 5 2013-08-02 16:15:19 PDT
Benjamin Poulain
Comment 6 2013-08-02 20:08:07 PDT
Comment on attachment 208054 [details] Patch Clearing flags on attachment: 208054 Committed r153685: <http://trac.webkit.org/changeset/153685>
Benjamin Poulain
Comment 7 2013-08-02 20:08:11 PDT
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 8 2013-08-28 10:03:04 PDT
*** Bug 119396 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.